Manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: microtodoui
  namespace: tod-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: microtodoui
  template:
    metadata:
      labels:
        app: microtodoui    
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers: 
      - name: microtodoui
        image: ghcr.io/abhishekg2244/myapp:latest
        ports:
          - containerPort: 80
